FIX for navbar menu creating scrollbar

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -30,16 +30,15 @@
 .navbar .menu.mobile {
   display: block;
   float: none;
-  padding: 0;
+  margin-top: 40px;
   text-align: center;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 40px);
   backdrop-filter: blur(5px);
   background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
   position: absolute;
-  top: 40px;
   z-index: 100;
+  opacity: 0; /* FRAMER */
 }
 
 .navbar .link {
